--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -8,10 +8,14 @@
 					<i id="username" class="me-1"></i> <input class="p-1 ps-2 pe-2" type="text" id="chatBox" placeholder="type!">
 				</div>
 				<div>
-					<p id="messageLogs"></p>
+					<pre id="messageLogs"></pre>
+				</div>
+				<div>
+					<pre id="normData"></pre>
 				</div>
             </div>
 		</div>
 	</div>
 </main>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="//cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
